--- a/css/start.css
+++ b/css/start.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/images/background.png);
+    background-image: url(../images/background.png);
     background-position: center;
     background-size: cover;
     height: 100vh;
